# Notion_Trello_Sync

./: README.md  pyproject.toml
.github/workflows/: run.yaml
src/: run_sync.py  test.py
