[tool.poetry]
name = "notion-trello-sync"
version = "0.1.0"
description = ""
authors = ["kayeungadrian-tam <tamkayeung.adrian@gmail.com>"]
readme = "README.md"
packages = [{include = "notion_trello_sync"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
